<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.MemberDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            android:theme="@style/CustomToolbarTheme"
            app:titleEnabled="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/memberDetailImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_detail_image_height"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                android:contentDescription="@string/member_detail_profile_image" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/memberDetailToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/memberDetailsConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_large"
                android:paddingEnd="@dimen/padding_large">

                <TextView
                    android:id="@+id/memberDetailFirstNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_small"
                    android:text="@string/first_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_view_label_text_size"
                    android:labelFor="@id/memberDetailFirstNameEditText"
                    app:layout_constraintBottom_toTopOf="@+id/memberDetailFirstNameEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/memberDetailFirstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:textSize="@dimen/edit_text_text_size"
                    android:textColor="@color/colorBlack"
                    app:backgroundTint="@color/colorTransparent"
                    app:layout_constraintBottom_toTopOf="@+id/memberDetailLastNameTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memberDetailFirstNameTextView"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/memberDetailLastNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_small"
                    android:text="@string/last_name"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_view_label_text_size"
                    android:labelFor="@id/memberDetailLastNameEditText"
                    app:layout_constraintBottom_toTopOf="@+id/memberDetailLastNameEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memberDetailFirstNameEditText" />

                <EditText
                    android:id="@+id/memberDetailLastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorTransparent"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/edit_text_text_size"
                    app:layout_constraintBottom_toTopOf="@+id/memberDetailEmailTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memberDetailLastNameTextView"
                    android:importantForAutofill="no"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/memberDetailEmailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start_small"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_view_label_text_size"
                    android:labelFor="@id/memberDetailEmailEditText"
                    app:layout_constraintBottom_toTopOf="@+id/memberDetailEmailEditText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memberDetailLastNameEditText" />

                <EditText
                    android:id="@+id/memberDetailEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorTransparent"
                    android:enabled="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/edit_text_text_size"
                    app:layout_constraintBottom_toTopOf="@+id/memberDetailEditSaveToggleButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memberDetailEmailTextView"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress" />

                <androidx.appcompat.widget.AppCompatToggleButton
                    android:id="@+id/memberDetailEditSaveToggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textOff="@string/edit"
                    android:textOn="@string/save"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memberDetailEmailEditText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>



